package co.carldesigner.development.model;

public enum EstadoPedido {
    PENDIENTE_ENTREGAR, PENDIENTE_COBRAR
}